@@ -3,6 +3,7 @@
 	* utils.c (display_calendar): Fixed the position of the
 	GtkCalendar and drop the use of the vbox to put the calendar
 	inside the GtkWindow. Some order and drop the use of unnecessary functions.
+	(validate_string): Add function.
 
 2008-05-04  Jonathan Gonzalez V.  <zeus@gnu.org>
 
